# shacl-ui

./: .dockerignore  README.md  Taskfile.yml
js/: README.md  Taskfile.yml  (+7 more)
python/: README.md  Taskfile.yml  pyproject.toml  run.py
python/shacl_ui/: __init__.py
python/shacl_ui/vendors/slsparser/: LICENSE  README.md  pathls.py  shapels.py  utilities.py
python/tests/: test_get_label.py
python/tests/data/: catalog.trig  catprez.ttl  ex.shacl.ttl  shacl.shacl.ttl  shacl.ttl
shui-server/: .env-template  .gitignore  Taskfile.yml  create_user.py  pyproject.toml  query.rq
shui-server/docker/: Dockerfile  Dockerfile.fuseki  asb_file_producer.py  config.ttl  docker-compose.yml  file_producer.py
shui-server/docker/data/: catalogs.trig  users.trig
shui-server/src/: change_request.py  dev.py  main.py
shui-server/src/shui/: __init__.py  app.py  change_event.py  change_request.py  collection.py  command.py  content_type.py  exceptions.py  kafka.py  mime_types.py  namespaces.py  nav.py  record.py  redis.py  router.py  settings.py  shacl.py
shui-server/src/shui/auth/: backends.py  consts.py  core.py  dependencies.py  forms.py  manager.py  models.py  namespaces.py  router.py  service.py  transports.py
shui-server/src/shui/auth/pages/: login.py  registration.py
shui-server/src/shui/clients/: base.py
shui-server/src/shui/clients/sparql_client/: __init__.py  exceptions.py  models.py
shui-server/src/shui/commands/: __init__.py  base.py  dependencies.py  kafka.py  service_bus.py
shui-server/src/shui/contrib/accept_header_parser/: LICENSE  __init__.py
shui-server/src/shui/html/: colours.py  flash.py  shoelace.py  shui.py
shui-server/src/shui/html/pages/: base.py  base_with_nav.py  collections.py  error.py  index.py  record.py
shui-server/src/shui/html/static/: htmx.css
shui-server/src/shui/settings/: base.py  env_file.py
(+88 files in other folders)
